# pygments-fit-style

./: LICENSE  README.md  pyproject.toml
pygments_fit_style/: fit.py
